--- a/index.html
+++ b/index.html
@@ -13,16 +13,22 @@ permalink: /
 
  {% include rockstar-speakers.html %}
 
+ {% comment %}
  {% include location-map.html %}
 
  {% include venue.html %}
- 
+ {% endcomment %}
+
  {% include twitter-feed.html %}
 
  {% include partners.html %}
 
+ {% comment %}
  {% include subscribe.html %}
+ {% endcomment %}
 
  {% include tickets.html %}
-
+ 
+ {% comment %}
  {% include tickets-2.html %}
+ {% endcomment %}
