--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@ permalink: /
  {% include rockstar-speakers.html %}
 
  {% include location-map.html %}
+ {% comment %}
 
  {% include venue.html %}
+ {% endcomment %}
 
  {% include twitter-feed.html %}
 
